# ChangeLog for dev-haskell/mtl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/mtl/ChangeLog,v 1.31 2008/10/04 17:47:54 armin76 Exp $

  04 Oct 2008; Raúl Porcel <armin76@gentoo.org> mtl-1.1.0.0.ebuild:
  alpha/ia64 stable

  03 Oct 2008; Ferris McCormick <fmccor@gentoo.org> mtl-1.1.0.0.ebuild:
  Sparc stable --- Bug #230919 and Bug #239368.

  15 Jul 2008; Jeroen Roovers <jer@gentoo.org> mtl-1.0-r1.ebuild,
  mtl-1.0.1.ebuild, mtl-1.1.0.0.ebuild:
  Stable for HPPA (bug #230919).

  06 Jul 2008; Markus Meier <maekke@gentoo.org> mtl-1.1.0.0.ebuild:
  amd64/x86 stable, bug #230919

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> mtl-1.0.1.ebuild:
  amd64 stable wrt #201984

  16 Dec 2007; nixnut <nixnut@gentoo.org> mtl-1.0.1.ebuild:
  Stable on ppc wrt bug 201984

*mtl-1.1.0.0 (13 Dec 2007)

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +mtl-1.1.0.0.ebuild:
  New version.

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> mtl-1.0-r1.ebuild,
  mtl-1.0.1.ebuild:
  Updates for upward compatability with cabal-1.2 and ghc-6.8

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> mtl-1.0.ebuild:
  Remove unnecessary blocker.

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> mtl-1.0.1.ebuild:
  Sparc stable --- part of Bug #201984.

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> mtl-1.0.1.ebuild:
  quote variable

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> mtl-1.0.1.ebuild:
  stable x86, bug 201984

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> mtl-1.0.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  11 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> mtl-1.0.1.ebuild:
  Marked ~ia64.

*mtl-1.0.1 (08 Jul 2007)

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +mtl-1.0.1.ebuild:
  New version from ghc-6.6.1 extralibs collection.

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> mtl-1.0-r1.ebuild:
  Use dev-lang/ghc rather than virtual/ghc.
