@@ -1,6 +1,8 @@
 DIST ghc-6.6.1-src-extralibs.tar.bz2 1928527 RMD160 1c18c85d978c4b3369132e247c823aaa90ea8530 SHA1 1398f6c35191d52410a2e066b382635dff0d8d6d SHA256 d162a82fc388fdd48c327b09bb6d778f2313d12d5282f3b120ac08a5d4e78902
 DIST mtl-1.1.0.0.tar.gz 17626 RMD160 e5df6557e66f5315fa9687eee6b3af4ae129d482 SHA1 1babf8cfce1985542d68af975a63fbf3bfb74a5d SHA256 ef7515fb4d9613172c9888d0c843ad26d4ac3efc6feea16989dc45a4f0f0bcb0
+DIST mtl-1.1.0.2.tar.gz 18901 RMD160 e7032fc069c8b24b97725b259d2e6fb05ace208b SHA1 883deca3cdf8052173c995b741bdedccc3c91440 SHA256 a225aaf2b1e337f40c31e5c42f95eec9a4608322b0e4c135d2b31b8421a58d36
 EBUILD mtl-1.0.1.ebuild 672 RMD160 b1d320d2adca6318e0bf6752ea02c4e9543bdc51 SHA1 778a03dc3bb7914e2574fa173fd4d448f35fa1a9 SHA256 5ef163a0ea5d38a9e22ab8d9ebfef80d9016aeae8d195a63c4f065efb8e24841
 EBUILD mtl-1.1.0.0.ebuild 562 RMD160 cf709e10589b84945c26fd3c1ae48493a41df127 SHA1 0fcf97169178e419fe23a99284126133a2c3d832 SHA256 e531034eb961f8d608ac3b91ffe517496c7d009edcc3c6ef23d1857577c7183e
-MISC ChangeLog 3511 RMD160 a89b9c4c95a00195159b0454eac28a249d6d408b SHA1 c5ccb73ca8d53ad783a03790e93eb811c1365f6a SHA256 1c3074c3be163fc18e1700dd315e82db9606bbfed9213736694ccbea31250115
+EBUILD mtl-1.1.0.2.ebuild 617 RMD160 58060f0264ebbb6c9c25ae4e0c7166f1437573d2 SHA1 7e110e342f9796bea068e267f425c75b3ee4cf9a SHA256 c2154d54fa7267ed360494f3d7f72a05679175e086d8b7a10766b6c4fa9c68e4
+MISC ChangeLog 3632 RMD160 44ce15c548ac4d1d902298facbaeaaf9aa87b65e SHA1 292a4b152c28d242f48e33ed3143a1f44ef685e2 SHA256 7edf2da71a7a4654f858f8e50bfc854154d9273adccbb6f0c5c896d87ed6c61e
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
