@@ -1,0 +1,20 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/mtl/mtl-1.1.0.2.ebuild,v 1.1 2009/04/19 10:00:32 kolmodin Exp $
+
+CABAL_FEATURES="lib profile haddock"
+inherit haskell-cabal
+
+DESCRIPTION="Monad transformer library"
+HOMEPAGE="http://haskell.org/ghc/"
+SRC_URI="http://hackage.haskell.org/packages/archive/${PN}/${PV}/${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+IUSE=""
+
+DEPEND=">=dev-lang/ghc-6.6.1
+		dev-haskell/cabal"
+
+RDEPEND=">=dev-lang/ghc-6.6.1"
